@@ -15,7 +15,7 @@
 <LI><A HREF="/data/seqdbs/blast/uniprot.build/uniprotmus.dat">uniprotmus.dat</A> - from MouseBLAST
 <LI><A HREF="/data/downloads/go_translation/ec2go">ec2go</A> - from Gene Ontology, EC-to-GO
 <LI><A HREF="/data/downloads/go_translation/interpro2go">interpro2go</A> - from Gene Ontology, InterPro-to-GO
-<LI><A HREF="/data/downloads/go_translation/spkw2go">spkw2go</A> - from Gene Ontology, SwissProt keyword-to-GO
+<LI><A HREF="/data/downloads/go_translation/uniprotkb_kw2go">uniprotkb_kw2go</A> - from Gene Ontology, UniProt keyword-to-GO
 </UL>
 <P>
 
